--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@ body{
 }
 .header{
     width: 1440px;
-height: 2811pxpx;
+height: 751px;
     background: linear-gradient(0.00deg, rgb(12, 11, 11),rgba(15, 14, 14, 0) 100%);
     background-color: rgb(32, 30, 30);
     padding: 10px;
@@ -130,10 +130,61 @@ font-weight: 600;
 
 }
 .habits-item p{
+    color: rgba(255, 255, 255, 0.5);
+font-family: Inter;
+font-size: 14px;
+font-weight: 400;
+
+}
+/* run section start */
+.run-sec{
+    width: 1460px;
+    height: 400px;
+    background-color: black;
+
+}
+.run{
+    width: 1060px;
+height: 371px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0px auto;
+    border-radius: 18px;
+background: rgb(34, 34, 34);
 
 }
 
+.run-text h1{
+    color: rgb(255, 255, 255);
+font-family: Inter;
+font-size: 48px;
+font-weight: 900;
 
+}
+.run-text p{
+    color: rgba(255, 255, 255, 0.5);
+font-family: Inter;
+font-size: 14px;
+font-weight: 400;
+
+}
+.run-text button{
+    width: 224px;
+height: 54px;
+border-radius: 42px;
+background: rgb(230, 83, 60);
+color: rgb(255, 255, 255);
+font-family: Inter;
+font-size: 18px;
+font-weight: 600;
+margin-top:20px;
+
+}
+.run-image img{
+    width: 366px;
+height: 312px;
+}
 
 
 
