--- a/style/style.css
+++ b/style/style.css
@@ -6,11 +6,11 @@ body{
     margin: 0;
 }
 .header{
-    width: 1440px;
-height: 751px;
+    width: 1435px;
+height: auto;
     background: linear-gradient(0.00deg, rgb(12, 11, 11),rgba(15, 14, 14, 0) 100%);
     background-color: rgb(32, 30, 30);
-    padding: 10px;
+    padding: 0.8rem;
 }
 
 .containar{
@@ -25,10 +25,10 @@ height: 751px;
 }
 
 .nav-heading{
-    font-size: 36px;
+    font-size: 2.25rem;
 font-weight: 800;
 color: rgb(230, 83, 60);
-width: 132px;
+width: 8.25rem;
 
 }
 
@@ -74,15 +74,22 @@ text-align: left;
 height: 500px;
 }
 /* habit section add */
+.habit-des{
+    width: 91.25rem;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .habits{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 0px;
-    
-background:black;
-    width: 1460px;
+    background:black;
+    width: 91.25rem;
+    height: auto;
     padding-top: 141px;
 }
 .habits h1{
@@ -100,11 +107,8 @@ font-weight: 400;
 .habits-items{
     width: 1044px;
 height: 400px;
-display: flex;
-
-justify-content: center;
-align-items: center;
-/* margin-top: 58px; */
+display: grid;
+grid-template-columns: 1fr 1fr 1fr 1fr;
 gap: 40px;
 
 }
@@ -138,17 +142,19 @@ font-weight: 400;
 }
 /* run section start */
 .run-sec{
-    width: 1460px;
-    height: 400px;
+    width: 91.25rem;
+    height: auto;
     background-color: black;
 
 }
 .run{
-    width: 1060px;
-height: 371px;
-    display: flex;
+    width: 66.25rem;
+height: auto;
+    /* display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: center; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     margin: 0px auto;
     border-radius: 18px;
 background: rgb(34, 34, 34);
@@ -330,7 +336,7 @@ font-weight: 400;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
+    
 }
 .footer-colum li{
     list-style: none;
@@ -382,6 +388,107 @@ font-weight: 400;
 margin-top: 30px;
 
 }
+.ham-burger{
+    display: none;
+}
+.hide{
+    display: none;
+}
 
 
 /* responsive */
+@media screen and (max-width:576px) {
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    .nav-option{
+        display: none;
+    }
+    .ham-burger{
+        display: block;
+        color: white;
+    }
+    .banner-section{
+        flex-direction: column;
+    }
+    .containar{
+        display: flex;
+        justify-content: space-between;
+    }
+    .header{
+        width: 93%;
+        margin: 0;
+    }
+    .banner-image{
+        width: 100%;
+    }
+    .habits{
+        display: flex;
+        flex-direction: column;
+    }
+    .habits-items{
+        flex-direction: column;
+    }
+    .run{
+        grid-template-columns: 1fr;
+        width: 90%;
+    }
+    .run-sec{
+        width: 100%;
+    }
+
+    .habit-des{
+        width:100%;
+    }
+    .habits-items{
+        grid-template-columns: 1fr;
+        width: 100%;
+        height: 100%;
+    }
+    .habits{
+        width: 100%;
+    }
+    .bmi-calculation{
+        width: 100%;
+    }
+    .BMI{
+        flex-direction: column;
+        width: 100%;
+        margin: 0 auto;
+    }
+    .meet-your-team{
+        width: 100%;
+        
+    }
+    .row-1{
+        grid-template-columns: 1fr;
+    }
+    .trainer img{
+        width: 100%;
+        height: 100%;
+    }
+    .trainer-member{
+        width: 100%;
+        height: 100%;
+    }
+    .footer{
+        flex-direction: column;
+    }
+    .foot{
+        width: 100%;
+        height: 100%;
+
+    }
+    .footer-des{
+        font-size: 60%;
+
+    }
+     .last{
+        height: 100%;
+        width: 100%;
+     }
+     hr{
+        width: 350PX;
+     }
+}
